--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "noImplicitAny": true,
       "removeComments": false,
       "preserveConstEnums": true,
-      "sourceMap": true
+      "sourceMap": false
    },
    "exclude": [
       "node_modules",
