--- a/package.json
+++ b/package.json
@@ -1,40 +1,21 @@
 {
   "name": "codehighlight.js",
-  "version": "0.1.0",
-  "scripts": {
-    "start": "HTTP_PORT=8081 node ./public/js/app.js"
-  },
+  "version": "0.0.1",
   "devDependencies": {
+    "express": "4.x",
+    "http": "*",
+    "path": "*",
     "gulp": "*",
+    "gulp-plumber": "*",
     "del": "*",
     "run-sequence": "*",
-    "gulp-filter": "*",
     "gulp-less": "*",
-    "tsc": "*",
-    "gulp-plumber": "*",
-    "gulp-typescript": "*",
-    "express": "4.x",
-    "jade": "*",
-    "connect": "*",
-    "errorhandler": "*",
-    "body-parser": "*",
-    "method-override": "*",
-    "express-session": "*",
-    "node-uuid": "*",
-    "morgan": "*",
-    "moment": "*"
-  },
-  "other_": {
-    "main-bower-files": "*",
-    "gulp-flatten": "*",
-    "gulp-rename": "*",
-    "gulp-concat": "*",
-    "gulp-jshint": "*",
-    "gulp-sass": "*",
-    "gulp-connect": "*"
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.1",
+    "gulp-typescript": "*"
   },
   "dependencies": {
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.4.1"
+    "gulp-tsconfig-update": "^1.1.1"
   }
 }
