--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codehighlight.js",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "devDependencies": {
     "express": "4.x",
     "http": "*",
@@ -13,9 +13,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-uglify": "^1.4.1",
-    "gulp-typescript": "*"
-  },
-  "dependencies": {
+    "gulp-typescript": "*",
     "compression": "^1.6.0",
     "gulp-tsconfig-update": "^1.1.1"
   }
