--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "codehighlight.js",
-  "version": "0.1.0",
-  "devDependencies": {
-    "express": "4.x",
-    "http": "*",
-    "path": "*",
-    "gulp": "*",
-    "gulp-plumber": "*",
-    "del": "*",
-    "run-sequence": "*",
-    "gulp-less": "*",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-uglify": "^1.4.1",
-    "gulp-typescript": "*",
-    "compression": "^1.6.0",
-    "gulp-tsconfig-update": "^1.1.1"
-  }
+   "name": "codehighlight.js",
+   "version": "0.1.0",
+   "devDependencies": {
+      "express": "4.x",
+      "http": "*",
+      "path": "*",
+      "gulp": "*",
+      "gulp-plumber": "*",
+      "del": "*",
+      "run-sequence": "*",
+      "gulp-less": "*",
+      "gulp-concat": "^2.6.0",
+      "gulp-minify-css": "^1.2.1",
+      "gulp-uglify": "^1.4.1",
+      "gulp-typescript": "*",
+      "compression": "^1.6.0",
+      "gulp-tsconfig-update": "^1.1.1",
+      "gulp-autoprefixer": "^3.1.0"
+   }
 }
