--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *.js
 !gulpfile.js
 !codehighlight.min.js
-/public
-/node_modules
-/typings
+public/
+node_modules/
+typings/
 npm-debug.log
+.vscode/
