--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
    "name": "codehighlight.js",
-   "version": "0.0.4-r3",
+   "version": "0.0.5",
    "main": [
       "dist/codehighlight.min.js",
       "dist/codehighlight.min.css"
